# movieclublol

./: Cargo.toml
migrations/: 20240214052626_create_movies.sql  20240214052823_create_reviews.sql
src/: add.rs  etc.rs  main.rs  movies.rs  review_card.rs  reviews.rs
templates/: Movie.html  Review.html
