[package]
name = "movieclublol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["full"]}
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "bigdecimal"]}
poem = { version = "2.0.0", features = ["multipart"]}
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"]}
serde = "1.0.196"
rustls = "0.22.2"
dotenv = "0.15.0"
askama = { version = "0.12.1", features = ["serde"] }

chrono = { version = "0.4.34", features = ["serde"]}
bigdecimal = { version = "0.3", features = ["serde"]}
maud = "0.26.0"


